------------------------------------------------------------------------------
  qPython 1.0.0 [2015.04.10]
------------------------------------------------------------------------------

  - Improve type detection for pandas.Series serialization 

------------------------------------------------------------------------------
  qPython 1.0 RC3 [2015.04.09]
------------------------------------------------------------------------------

  - Fix: bug during handshake with blank username/password 

------------------------------------------------------------------------------
  qPython 1.0 RC2 [2015.01.19]
------------------------------------------------------------------------------

  - Fix: handling of nested lists of homogeneous length
  - Fix: pandas: null representation for strings

------------------------------------------------------------------------------
  qPython 1.0 RC1 [2014.10.22]
------------------------------------------------------------------------------

  - Introduce support for pandas

------------------------------------------------------------------------------
  qPython 1.0 Beta 6 [2014.10.16]
------------------------------------------------------------------------------

  - Configurable deserialization for temporal vectors
  - numpy datetime64/timedelta64 vectors ans atoms are now serializable without 
    explicit conversions
  - QTemporal: null values are now backed as numpy NaT
  - Fix: error handling while initializing connection
  - Fix: sanity check against protocol version for guids
  - Fix: socket timeout in qwriter

------------------------------------------------------------------------------
  qPython 1.0 Beta 5 [2014.10.01]
------------------------------------------------------------------------------

  - Redesign lambdas and projections handling
  - Rework collections API
  - Extend QConnection class with context manager API
  - Fix: reading of generic null (::) embedded in lists