@@ -1,6 +1,6 @@
 package:
   name: qpython
-  version: 1.0.0
+  version: 1.0.1
 
 build:
     number: 1
