@@ -64,7 +64,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'qPython'
-copyright = u'2014, DEVnet'
+copyright = u'2014-2015, DEVnet'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
@@ -73,7 +73,7 @@ copyright = u'2014, DEVnet'
 # The short X.Y version.
 version = '1.0'
 # The full version, including alpha/beta/rc tags.
-release = '1.0-beta'
+release = '1.0.1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
