@@ -14,11 +14,13 @@
 #  limitations under the License.
 #
 
+import qpython
 from qpython import qconnection
 from qpython.qtype import QException
 
 
 if __name__ == '__main__':
+    print('qPython %s Cython extensions enabled: %s' % (qpython.__version__, qpython.__is_cython_enabled__))
     with qconnection.QConnection(host = 'localhost', port = 5000) as q:
         print(q)
         print('IPC version: %s. Is connected: %s' % (q.protocol_version, q.is_connected()))
