@@ -212,6 +212,8 @@ flip `name`iq`misc!(`Dent`Beeblebrox`Prefect;98 42 126;("The Hitch Hiker's Guide
 6200630B0002000000706F73006461746573000000020000000B00030000006431006432006433000E00030000006E0100007900000000000080
 ([eid:1001 1002 1003] pos:`d1`d2`d3;dates:(2001.01.01;2000.05.01;0Nd))
 636200630B000100000065696400000001000000070003000000E903000000000000EA03000000000000EB030000000000006200630B0002000000706F73006461746573000000020000000B00030000006431006432006433000E00030000006E0100007900000000000080
+([k: 1 2 3] v: `a`b`c)
+636200630b00010000006b000000010000000700030000000100000000000000020000000000000003000000000000006200630b000100000076000000010000000b0003000000610062006300
 0Ng
 fe00000000000000000000000000000000
 "G"$"8c680a01-5a49-5aab-5a65-d4bfddb6a661"
