@@ -156,6 +156,11 @@ try:
                                                                                                ),
                                                                       'meta': MetaData(**{'qtype': QKEYED_TABLE, 'pos': QSYMBOL_LIST, 'dates': QDATE_LIST, 'eid': QLONG_LIST}),
                                                                       'index': ['eid'] }),
+                     ('([k: 1 2 3] v: `a`b`c)',
+                                                                     {'data': pandas.DataFrame({'k':[1,2,3],'v':['a','b','c']}),
+                                                                      'meta': MetaData(**{'qtype': QKEYED_TABLE}),
+                                                                      'index': ['k'],
+                                                                      'compare_meta': False }),
                                     ))
 
 
@@ -261,7 +266,8 @@ try:
                         result = result.reset_index()
                         result.meta = meta
 
-                    assert value['meta'].as_dict() == result.meta.as_dict(), 'deserialization failed qtype: %s, expected: %s actual: %s' % (query, value['meta'], result.meta)
+                    if not 'compare_meta' in value or value['compare_meta']:
+                        assert value['meta'].as_dict() == result.meta.as_dict(), 'deserialization failed qtype: %s, expected: %s actual: %s' % (query, value['meta'], result.meta)
                     assert compare(value['data'], result), 'deserialization failed: %s, expected: %s actual: %s' % (query, value['data'], result)
                 else:
                     assert compare(value, result), 'deserialization failed: %s, expected: %s actual: %s' % (query, value, result)
