@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qPython 1.0.1 [2015.08.11]
+------------------------------------------------------------------------------
+
+  - Fix: serialization of indexed Pandas.DataFrames 
+
+------------------------------------------------------------------------------
   qPython 1.0.0 [2015.04.10]
 ------------------------------------------------------------------------------
 
